# CambiOS

./: .gitignore  .mcp.json  ASSUMPTIONS.md  ArcOS.md  CLAUDE.md  COPYRIGHT  CambiOS.md  Cargo.toml  FS-and-ID-design-plan.md  GOVERNANCE.md  INTERRUPT_ROUTING.md  Makefile  PHILOSOPHY.md  README.md  SECURITY.md  STATUS.md  SYSCALLS.md  arcos.iso  build.rs  identity.md  limine-aarch64.conf  limine.conf  linker-aarch64.ld  linker-riscv64.ld  linker.ld  manifest.toml  rust-toolchain.toml  win-compat.md
.cargo/: config.toml
.claude/: settings.json
.githooks/: commit-msg  pre-commit  pre-push
.github/: CODEOWNERS  codeowners-enforcement-test.txt  copilot-instructions.md
.github/workflows/: boot-smoke.yml  ci.yml  proofs.yml
arcos-abi/: Cargo.toml
arcos-abi/src/: lib.rs
cambios-abi/: Cargo.toml
cambios-abi/.cargo/: config.toml
cambios-abi/src/: audit.rs  lib.rs
cambios-ccid-proto/: Cargo.toml
cambios-ccid-proto/src/: lib.rs
cambios-fde-proto/: Cargo.toml
cambios-fde-proto/src/: lib.rs
cambios-manifest/: Cargo.toml
cambios-manifest/.cargo/: config.toml
cambios-manifest/src/: lib.rs
docs/: ASSUMPTIONS.md  CambiOS.md  FS-and-ID-design-plan.md  GOVERNANCE.md  PHILOSOPHY.md  SECURITY.md  SYSCALLS.md  developer-experience.md  identity-synthesis.md  identity.md  review-protocol.md  storage-planning.md  threat-model.md  win-compat.md
docs/adr/: 000-zta-and-cap.md  001-per-cpu-scheduling.md  001-smp-scheduling-and-lock-hierarchy.md  002-three-layer-enforcement-pipeline.md  003-content-addressed-storage-and-identity.md  004-cryptographic-integrity.md  005-ipc-primitives-control-and-bulk.md  006-policy-service.md  007-capability-revocation-and-telemetry.md  008-boot-time-sized-object-tables.md  009-purpose-tiers-scope.md  010-persistent-object-store-on-disk-format.md  010-win-compat-api-ai-boundary.md  010-win-compat-phase1-catalog.md  011-graphics-architecture-and-scaling.md  012-input-architecture-and-device-classes.md  013-riscv64-architecture-support.md  014-compositor-scanout-driver-protocol.md  015-storage-tiers-and-commitment-ladder.md  016-win-compat-api-ai-boundary.md  017-user-directed-cloud-inference.md  017-win-compat-phase1-catalog.md  018-init-process-and-boot-manifest.md  019-process-fault-reaping-and-peer-generation.md  020-typed-user-buffer-slices-at-syscall-boundary.md  021-typed-boot-error-propagation.md  022-wall-clock-time.md  024-syscall-abi-crate.md  (+15 more)
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_binary_verifier.rs  fuzz_buddy_allocator.rs  fuzz_capability.rs  fuzz_elf_parser.rs  fuzz_syscall_dispatcher.rs
src/: boot_modules.rs  lib.rs  manifest.rs  process.rs  reaper.rs
tools/: banned-paths.txt  check-adrs.py  check-assumptions-baseline.txt  check-assumptions.py  check-banned-paths.py  check-boot-panics-baseline.txt  check-boot-panics.py  check-claude-staged-files.py  check-deferrals-baseline.txt  check-deferrals.py  check-demo-readiness.sh  check-doc-refs-baseline.txt  check-doc-refs.py  check-edit-window.py  check-index-isolation.py  check-lockfile-additions.py  check-preflight-discipline.py  check-status-freshness.py  check-unsafe-coverage-baseline.txt  check-unsafe-coverage.py  claude-preflight.py  gen-symbols.py  gen-symbols.sh  log-claude-edit.py  new-adr.py  qemu-run-quiet.py  sync-to-site.py  sync-to-site.toml
tools/bake-font/: Cargo.toml
tools/bake-font/.cargo/: config.toml
tools/bake-font/src/: main.rs
tools/build-manifest/: Cargo.toml
tools/build-manifest/.cargo/: config.toml
tools/build-manifest/src/: main.rs
tools/format-volume/: Cargo.toml
tools/format-volume/src/: main.rs
tools/gen-audit-taxonomy/: Cargo.toml
tools/gen-audit-taxonomy/src/: main.rs
tools/gen-dev-piv-keys/: Cargo.toml
tools/gen-dev-piv-keys/src/: main.rs
tools/sign-elf/: Cargo.toml
tools/sign-elf/.cargo/: config.toml
tools/sign-elf/src/: main.rs
user/: hello-aarch64.S  hello-riscv64.S  hello.S  user-aarch64.ld  user-riscv64.ld  user.ld
user/audit-tail/: Cargo.toml  link-aarch64.ld  link-riscv64.ld  link.ld
user/audit-tail/src/: main.rs
user/compositor/: Cargo.toml  link-aarch64.ld  link-riscv64.ld  link.ld
user/compositor/src/: main.rs  scanout.rs  windows.rs
user/fde-mount/: Cargo.toml  link-aarch64.ld  link-riscv64.ld  link.ld
user/fde-mount/src/: main.rs
user/fs-service/: Cargo.toml  link-aarch64.ld  link-riscv64.ld  link.ld
user/fs-service/.cargo/: config.toml
user/fs-service/src/: main.rs
user/hello-window/: Cargo.toml  link-aarch64.ld  link-riscv64.ld  link.ld
user/hello-window/.cargo/: config.toml
user/hello-window/src/: main.rs
user/init/: Cargo.toml  link-riscv64.ld  link.ld
user/init/src/: engine.rs  lib.rs  main.rs
user/key-store-service/: Cargo.toml  link-aarch64.ld  link-riscv64.ld  link.ld
user/key-store-service/src/: lib.rs  main.rs
user/key-store-service/src/piv/: dispatch.rs  inert.rs  mod.rs  sw.rs
user/key-store-service/src/vault/: init.rs  mod.rs
user/libfs/: Cargo.toml
user/libfs-proto/: Cargo.toml
user/libfs-proto/src/: lib.rs
user/libfs/src/: lib.rs  test_transport.rs  tests.rs
user/libgui/: Cargo.toml
user/libgui-proto/: Cargo.toml
user/libgui-proto/.cargo/: config.toml
user/libgui-proto/src/: lib.rs
user/libgui/src/: bitmap.rs  client.rs  decorations.rs  font.rs  font_aa.rs  font_jbmono_data.rs  frame_clock.rs  lib.rs  surface.rs  tile_grid.rs
user/libinput-proto/: Cargo.toml
user/libinput-proto/src/: lib.rs
user/libscanout/: Cargo.toml
user/libscanout/src/: lib.rs
user/libsys-rt/: Cargo.toml
user/libsys-rt/src/: lib.rs
user/ping/: Cargo.toml  link-aarch64.ld  link-riscv64.ld  link.ld
user/ping/src/: game.rs  lib.rs  main.rs  render.rs
user/pong/: Cargo.toml  link-aarch64.ld  link-riscv64.ld  link.ld
user/pong/src/: game.rs  lib.rs  main.rs  render.rs
user/scanout-limine/: Cargo.toml  link-aarch64.ld  link.ld
user/scanout-limine/src/: main.rs
user/scanout-virtio-gpu/: Cargo.toml  link-aarch64.ld  link-riscv64.ld  link.ld
user/scanout-virtio-gpu/src/: gpu.rs  main.rs  transport.rs  virtqueue.rs
verification/: CLAIMS.md
(+257 files in other folders)
