# Copyright (C) 2024-2026 Jason Ricca. All rights reserved.

[workspace]
# User-space crates and tools are built separately (different targets, linker scripts).
# Exclude them from the kernel workspace to prevent accidental cross-compilation.
exclude = ["user/fs-service", "user/key-store-service", "user/virtio-net", "user/i219-net", "user/udp-stack", "user/shell", "user/libsys", "tools/sign-elf"]

[package]
name = "arcos"
version = "0.1.0"
edition = "2021"
authors = ["ArcOS Development Team"]

[dependencies]
bitflags = "2.3"
limine = "0.5"
blake3 = { version = "1.8", default-features = false, features = ["pure"] }
ed25519-compact = { version = "2.2", default-features = false }

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = { version = "0.14", features = ["instructions"] }
uart_16550 = "0.3"

[profile.release]
opt-level = 2
lto = false
codegen-units = 1
strip = false

[profile.dev]
opt-level = 0

[[bin]]
name = "arcos_microkernel"
path = "src/microkernel/main.rs"

[lib]
name = "arcos_core"
path = "src/lib.rs"