# SPDX-License-Identifier: AGPL-3.0-or-later
# Copyright (C) 2024-2026 Jason Ricca

[workspace]
# User-space crates and tools are built separately (different targets, linker scripts).
# Exclude them from the kernel workspace to prevent accidental cross-compilation.
exclude = ["user/fs-service", "user/key-store-service", "user/virtio-net", "user/virtio-blk", "user/virtio-input", "user/i219-net", "user/udp-stack", "user/shell", "user/policy-service", "user/libsys", "user/libterm", "user/libflag", "user/libfs", "user/libfs-proto", "user/libscanout", "user/libgui-proto", "user/libgui", "user/libinput-proto", "user/fb-demo", "user/hello-window", "user/compositor", "user/scanout-limine", "user/scanout-virtio-gpu", "user/tree", "user/worm", "user/pong", "user/super-sprouty-o", "user/terminal-window", "tools/sign-elf", "tools/mkinitrd", "verification/buddy-proofs", "verification/elf-proofs", "verification/frame-proofs", "verification/capability-proofs"]

[package]
name = "arcos"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
authors = ["CambiOS Development Team"]

[dependencies]
bitflags = "2.3"
limine = "0.5"
blake3 = { version = "1.8", default-features = false, features = ["pure"] }
ed25519-compact = { version = "2.2", default-features = false }

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = { version = "0.14", features = ["instructions"] }
uart_16550 = "0.3"

# [target.'cfg(target_arch = "riscv64")'.dependencies]
# Deferred to Phase R-1: the `riscv` crate (0.12) provides CSR read/write
# wrappers (satp, stvec, sepc, scause, sstatus, sscratch, sie, sip), but
# we may prefer hand-rolled inline asm for verification transparency,
# matching how AArch64 accesses TTBR0_EL1 / VBAR_EL1 / SPSR_EL1 directly.
# Decision made when Phase R-1 boot stub lands — pin to whatever works,
# document choice in ADR-013.

[profile.release]
opt-level = 2
lto = false
codegen-units = 1
strip = false

[profile.dev]
opt-level = 0

[[bin]]
name = "cambios_microkernel"
path = "src/microkernel/main.rs"

[lib]
name = "arcos_core"
path = "src/lib.rs"