# SPDX-License-Identifier: MPL-2.0
# Copyright (C) 2024-2026 Jason Ricca

[package]
name = "arcos-abi"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
description = "Stable syscall ABI surface for CambiOS — shared by kernel and userspace"

[lib]
path = "src/lib.rs"

# No dependencies beyond `core`. This crate is the contract layer:
# kernel and userspace both consume it; nothing else.
[dependencies]

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = false
panic = "abort"
