# SPDX-License-Identifier: MPL-2.0
# Copyright (C) 2024-2026 Jason Ricca

[package]
name = "cambios-fde-proto"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
description = "FDE volume header on-disk format for CambiOS (ADR-032 § 4) — shared by kernel-side verify path, userspace fde-mount orchestrator, and format-volume host tool. Parser-only; signature verification stays kernel-side."

[lib]
path = "src/lib.rs"

# No dependencies beyond `core`. This crate is the format-contract layer:
# kernel and userspace both consume it; nothing else.
[dependencies]

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = false
panic = "abort"
