# Copyright (C) 2024-2026 Jason Ricca. All rights reserved.

[package]
name = "arcos-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

[dependencies.arcos_core]
package = "arcos"
path = ".."

# --- Fuzz targets ---

[[bin]]
name = "fuzz_elf_parser"
path = "fuzz_targets/fuzz_elf_parser.rs"
doc = false

[[bin]]
name = "fuzz_binary_verifier"
path = "fuzz_targets/fuzz_binary_verifier.rs"
doc = false

[[bin]]
name = "fuzz_buddy_allocator"
path = "fuzz_targets/fuzz_buddy_allocator.rs"
doc = false

[[bin]]
name = "fuzz_capability"
path = "fuzz_targets/fuzz_capability.rs"
doc = false

[workspace]
members = ["."]
