# SPDX-License-Identifier: AGPL-3.0-or-later
# Copyright (C) 2024-2026 Jason Ricca

[package]
name = "cambios-fuzz"
version = "0.0.0"
publish = false
edition = "2021"
license = "AGPL-3.0-or-later"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

[dependencies.cambios_core]
package = "cambios"
path = ".."

# --- Fuzz targets ---

[[bin]]
name = "fuzz_elf_parser"
path = "fuzz_targets/fuzz_elf_parser.rs"
doc = false

[[bin]]
name = "fuzz_binary_verifier"
path = "fuzz_targets/fuzz_binary_verifier.rs"
doc = false

[[bin]]
name = "fuzz_buddy_allocator"
path = "fuzz_targets/fuzz_buddy_allocator.rs"
doc = false

[[bin]]
name = "fuzz_capability"
path = "fuzz_targets/fuzz_capability.rs"
doc = false

[[bin]]
name = "fuzz_syscall_dispatcher"
path = "fuzz_targets/fuzz_syscall_dispatcher.rs"
doc = false

[workspace]
members = ["."]
