# SPDX-License-Identifier: AGPL-3.0-or-later
# Copyright (C) 2024-2026 Jason Ricca

[package]
name = "format-volume"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "CambiOS FDE volume header formatter (host-side) — writes a fresh signed volume header per ADR-032 § 4 to a raw disk image file. Reads the DPIV secret bundle produced by gen-dev-piv-keys (slot-9C signing key + slot-9D X25519 keypair for the wrap step), generates an ephemeral X25519 keypair, ECDH+HKDF+ChaCha20-Poly1305-encrypts a master AES-256 key, builds a 1-slot YubiKey-live volume header, Ed25519-signs it under the slot-9C key, and writes 16 KiB to LBA 0..3 of the target disk image."

[dependencies]
blake3 = "1.8"
chacha20poly1305 = "0.10"
ed25519-compact = { version = "2.2", features = ["x25519"] }
cambios-fde-proto = { path = "../../cambios-fde-proto" }

[profile.release]
opt-level = "s"
