# SPDX-License-Identifier: AGPL-3.0-or-later
# Copyright (C) 2024-2026 Jason Ricca

[package]
name = "cambios-compositor"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
cambios-libsys = { path = "../libsys" }
cambios-libscanout = { path = "../libscanout" }
cambios-libgui-proto = { path = "../libgui-proto" }
cambios-libinput-proto = { path = "../libinput-proto" }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = false
panic = "abort"
