# SPDX-License-Identifier: AGPL-3.0-or-later
# Copyright (C) 2024-2026 Jason Ricca

[package]
name = "cambios-init"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
cambios-manifest = { path = "../../cambios-manifest" }

# Syscall layer — bare-metal only. The host build (engine unit tests;
# the bin collapses to a stub) must not pull syscall asm the host
# can't assemble (aarch64-apple-darwin reserves x18).
[target.'cfg(target_os = "none")'.dependencies]
cambios-libsys = { path = "../libsys" }

[features]
# ADR-018 step-7 coexistence gate: with the feature OFF (default),
# init parses + validates the manifest and idles — the legacy
# BOOT_MODULE_ORDER chain still starts every service, so running the
# spawn wave would double-spawn them all. The step-8 cutover builds
# with --features supervise and removes the old chain; the flag
# retires when the default flips there.
supervise = []

[profile.release]
opt-level = "s"        # Size-optimized (small ELF)
lto = true
codegen-units = 1
strip = false          # Keep symbols for kernel loader debug
panic = "abort"
