# SPDX-License-Identifier: MPL-2.0
# Copyright (C) 2024-2026 Jason Ricca

[package]
name = "cambios-libsys-rt"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
cambios-libsys = { path = "../libsys" }
# Same allocator + feature set as the proven terminal-window pattern.
linked_list_allocator = { version = "0.10", default-features = false, features = ["use_spin"], optional = true }

[features]
# Opt-in userspace heap (ADR-037 L0: alloc services opt IN; non-alloc
# services pay nothing). Enables the `heap:` arm of `service_main!`.
heap = ["dep:linked_list_allocator"]
