# SPDX-License-Identifier: AGPL-3.0-or-later
# Copyright (C) 2024-2026 Jason Ricca

[package]
name = "cambios-ping"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "CambiOS Ping — third first-party app. Single-player vs AI on the Tree/Worm shared garden palette (paddles = logs, ball = acorn, field = grass). First libgui::FrameClock consumer alongside worm; first first-party app with continuous-motion physics."

[dependencies]
cambios-libsys = { path = "../libsys" }
cambios-libsys-rt = { path = "../libsys-rt" }
cambios-libgui = { path = "../libgui" }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = false
panic = "abort"
