# Copyright (C) 2024-2026 Jason Ricca. All rights reserved.

[package]
name = "arcos-scanout-limine"
version = "0.1.0"
edition = "2021"
description = "CambiOS scanout driver — Limine linear-framebuffer fallback (Phase Scanout-2, ADR-014). Maps the Limine FB and copies compositor scanout regions into it on FrameReady. No hardware MMIO, no DMA, no IRQs."

[dependencies]
arcos-libsys = { path = "../libsys" }
arcos-libscanout = { path = "../libscanout" }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = false
panic = "abort"
